--- a/config.yaml
+++ b/config.yaml
@@ -1,24 +1,27 @@
 baseURL: http://example.org/
 languageCode: en-gb
-title: Aaron Carson!
+title: Aaron Carson
 theme: papermod
 
 params:
   profileMode:
     enabled: true
     title: Aaron Carson
-    subtitle: God knows what.
+    subtitle: Cyber security... amongst other things.
     imageUrl: https://aaroncarson.co.uk/assets/images/aaroncarson.webp?1641751937869805074
     imageTitle: Aaron Carson stood in front of Tower Bridge in London.
     buttons:
+      - name: About
+        url: /about
+      - name: Contact
+        url: /contact
       - name: Posts
         url: /posts
-      - name: GitHub
-        url: https://github.com/caraar12345
-    socialIcons:
-      - name: Twitter
-        url: https://twitter.com/acar321
-      - name: Instagram
-        url: https://instagram.com/caraar12345
-      - name: LinkedIn
-        url: https://www.linkedin.com/in/aaron-carson
+  socialIcons:
+    - name: twitter
+      url: https://twitter.com/acar321
+    - name: linkedin
+      url: https://www.linkedin.com/in/aaron-carson
+    - name: cv
+      url: https://www.linkedin.com/in/aaron-carson
+  comments: true
