--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://www.aaroncarson.co.uk/
 languageCode: en-gb
 title: Aaron Carson
 theme: papermod
@@ -8,7 +8,7 @@ params:
     enabled: true
     title: Aaron Carson
     subtitle: Cyber security... amongst other things.
-    imageUrl: https://aaroncarson.co.uk/assets/images/aaroncarson.webp?1641751937869805074
+    imageUrl: /images/aaroncarson.png
     imageTitle: Aaron Carson stood in front of Tower Bridge in London.
     buttons:
       - name: About
@@ -21,7 +21,5 @@ params:
     - name: twitter
       url: https://twitter.com/acar321
     - name: linkedin
-      url: https://www.linkedin.com/in/aaron-carson
-    - name: cv
       url: https://www.linkedin.com/in/aaron-carson
   comments: true
