--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.aaroncarson.co.uk/
+baseURL: https://aaroncarson.co.uk/
 languageCode: en-gb
 title: Aaron Carson
 theme: papermod
